objects/Animal__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of animal</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Animal_Owner__c</fullName>
        <description>Account owner of animal</description>
        <label>Animal Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Animals</relationshipLabel>
        <relationshipName>Animals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Breed__c</fullName>
        <description>Breed of animal</description>
        <label>Breed</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cat: Bengal</fullName>
                </value>
                <value>
                    <fullName>Cat: British</fullName>
                </value>
                <value>
                    <fullName>Cat: Persian</fullName>
                </value>
                <value>
                    <fullName>Cat: Siamese</fullName>
                </value>
                <value>
                    <fullName>Dog: American Bulldog</fullName>
                </value>
                <value>
                    <fullName>Dog: American Staffordshire Terrier</fullName>
                </value>
                <value>
                    <fullName>Dog: Beagle</fullName>
                </value>
                <value>
                    <fullName>Dog: Pug</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_Indicator__c</fullName>
        <label>Health Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Link to image of animal</description>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Image of animal</description>
        <formula>IMAGE( Image_URL__c , &apos;Image of animal&apos;, 300, 300)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Rating of animal</description>
        <label>Rating</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of animal</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <description>Weight of animal</description>
        <label>Weight</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Animal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Cats</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Cat</value>
        </filters>
        <label>Cats</label>
    </listViews>
    <listViews>
        <fullName>Dogs</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Dog</value>
        </filters>
        <label>Dogs</label>
    </listViews>
    <nameField>
        <label>Animal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Age_can_not_be_less_zero</fullName>
        <active>true</active>
        <description>Age can not be less zero</description>
        <errorConditionFormula>Age__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Age__c</errorDisplayField>
        <errorMessage>Age can not be less zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weight_can_not_be_less_zero</fullName>
        <active>true</active>
        <description>Weight can not be less zero</description>
        <errorConditionFormula>Weight__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Weight__c</errorDisplayField>
        <errorMessage>Weight can not be less zero</errorMessage>
    </validationRules>
</CustomObject>